Added asp-append-version to link and script

--- a/src/dotnet.ts.react/Views/Home/Index.cshtml
+++ b/src/dotnet.ts.react/Views/Home/Index.cshtml
@@ -20,14 +20,14 @@
 
     <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
     <link rel="SHORTCUT ICON" href="http://cdn.arragro.com/public/images/favicon.ico" />
-    <link rel="stylesheet" href="/dist/main.css" />
+    <link rel="stylesheet" href="/dist/main.css" asp-append-version="true" />
 </head>
 <body>
     <div id="react-app"></div>
     <!-- <div id="react-app"
          asp-prerender-module="ReactApp/boot.tsx"></div> -->
 
-    <script src="/dist/vendor.js"></script>
-    <script src="/dist/main.js"></script>
+    <script src="/dist/vendor.js" asp-append-version="true"></script>
+    <script src="/dist/main.js" asp-append-version="true"></script>
 </body>
 </html>
