--- a/src/dotnet.ts.react/Views/Home/Index.cshtml
+++ b/src/dotnet.ts.react/Views/Home/Index.cshtml
@@ -18,8 +18,17 @@
     <meta property="og:description" content="New Zealand base .Net Azure Specialists helping companies move to the cloud" />
     <meta property="og:title" content="Arragro Ltd - Boutique .Net Azure Solutions and Migrations" />
 
+    <link rel="apple-touch-icon" sizes="180x180" href="/images/icons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/images/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/images/icons/favicon-16x16.png">
+    <link rel="manifest" href="/images/icons/site.webmanifest">
+    <link rel="mask-icon" href="/images/icons/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="/images/icons/favicon.ico">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="msapplication-config" content="/images/icons/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
+
     <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
-    <link rel="SHORTCUT ICON" href="http://cdn.arragro.com/public/images/favicon.ico" />
     <link rel="stylesheet" href="/dist/main.css" asp-append-version="true" />
 </head>
 <body>
