Upgraded dotnet, npm packages where I can and webpack

--- a/src/dotnet.ts.react.redux/ReactApp/scss/site.scss
+++ b/src/dotnet.ts.react.redux/ReactApp/scss/site.scss
@@ -162,5 +162,13 @@ a.btn:focus {
     background-color: rgba(169, 68, 66, 0.40)
 }
 
+.test-purify {
+    display: none;
+}
+
+.test-excluded {
+    display: none;
+}
+
 @import 'navbar.scss';
 @import 'todo.scss';
