--- a/src/dotnet.ts.react.redux/Views/Home/Index.cshtml
+++ b/src/dotnet.ts.react.redux/Views/Home/Index.cshtml
@@ -29,9 +29,11 @@
     <meta name="theme-color" content="#ffffff">
 
     <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
+    <link rel="stylesheet" href="/dist/vendor.css" asp-append-version="true" />
     <link rel="stylesheet" href="/dist/main.css" asp-append-version="true" />
 </head>
 <body>
+    <div class="test-purify"></div>
     <div id="react-app"></div>
     <!-- <div id="react-app"
          asp-prerender-module="ReactApp/boot.tsx"></div> -->
